nav-slider fixed on mobile

--- a/src/sass/components/_cart-page.sass
+++ b/src/sass/components/_cart-page.sass
@@ -13,7 +13,8 @@
     overflow: hidden
     +sm 
       margin-bottom: 24px
-      +flex-size(290px)
+      +flex-size(auto)
+      max-width: 290px
   &__card
     flex-grow: 1
     padding-left: 10px
